--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -157,11 +157,10 @@
       <ul class="leaders">
         <li><span>ROČNE POSLIKAVE, FOLIJE IN DODATKI</span></li>
         <li class="dots">
-          <span class="name">*PREPROSTO</span> <span class="price">1 noht/+0,50€-1€ - vsi/5-8€</span>
+          <span class="name">PREPROSTO</span> <span class="price">1 noht/+0,50€-1€ - vsi/5-8€</span>
         </li>
            <p class="text-right bottom-space">
-        *marble, enobarvne vijugice, folije, itd.<br />
-        **plamenčki, večbarvne vijugice, itd.
+        (MANJŠE POSLIKAVE, MARMOR, VIJUGICEE, FOLIJE, VEČBARVNI FRENCH, ITD.)<br />
       </p>
       <ul class="leaders bottom-space">
         <li class="dots">
@@ -169,9 +168,8 @@
         </li>
       </ul>
       <p class="text-right bottom-space">
-        *marble, enobarvne vijugice, folije, itd.<br />
-        **plamenčki, večbarvne vijugice, itd.
-      </p>
+        (PLAMENČKI, VEČBARVNE VIJUGICE, PRAZNIČNI MOTIVI ITD.)<br />
+        </p>
       <ul class="leaders bottom-space">
         <li class="dots">
           <span class="name">KRISTALČKI, OKRASKI</span> <span class="price">0,25€ - 0,50€ - 0,75€</span>
@@ -230,7 +228,7 @@
       </ul>
       <p class="text-justify">
         Zamenjava bona za denar ni možna. Možno je le doplačilo in izbria druge storitve v drugi vrednosti. Darilni bon
-        je veljaven 6 mesecev od nakupa.
+        je veljaven 6 mesecev od dneva nakupa.
       </p>
       <br />
       
