--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -159,10 +159,10 @@
         <li class="dots">
           <span class="name">PREPROSTO</span> <span class="price">1 noht/+0,50€-1€ - vsi/5-8€</span>
         </li>
-           <p class="text-right bottom-space">
-        (MANJŠE POSLIKAVE, MARMOR, VIJUGICEE, FOLIJE, VEČBARVNI FRENCH, ITD.)<br />
+         <p class="text-justify">
+       *MANJŠE POSLIKAVE, MARMOR, VIJUGICEE, FOLIJE, VEČBARVNI FRENCH, ITD.
       </p>
-      <ul class="leaders bottom-space">
+          
         <li class="dots">
           <span class="name">**ZAHTEVNEJŠE</span> <span class="price">1 noht/+1,5-2€ - vsi/8-10€</span>
         </li>
