--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -157,19 +157,16 @@
       <ul class="leaders">
         <li><span>ROČNE POSLIKAVE, FOLIJE IN DODATKI</span></li>
         <li class="dots">
-          <span class="name">PREPROSTO</span> <span class="price">1 noht/+0,50€-1€ - vsi/5-8€</span>
+      <span class="name">I. PREPROSTO</span> <span class="price">1 noht/+0,50€-1€ - vsi/5-8€</span>
         </li>
-         <p class="text-justify">
-       *MANJŠE POSLIKAVE, MARMOR, VIJUGICEE, FOLIJE, VEČBARVNI FRENCH, ITD.
-      </p>
-          
         <li class="dots">
-          <span class="name">**ZAHTEVNEJŠE</span> <span class="price">1 noht/+1,5-2€ - vsi/8-10€</span>
+          <span class="name">II. ZAHTEVNEJŠE</span> <span class="price">1 noht/+1,5-2€ - vsi/8-10€</span>
         </li>
       </ul>
       <p class="text-right bottom-space">
-        (PLAMENČKI, VEČBARVNE VIJUGICE, PRAZNIČNI MOTIVI ITD.)<br />
-        </p>
+        I. vse manjše poslikave, marble, enobarvne vijugice, večbarvna risana francoska, folije, itd.<br />
+        II. večbarvne poslikave, plamenčki, večbarvne vijugice, 3d dragon scale, snake skin, itd.
+      </p>
       <ul class="leaders bottom-space">
         <li class="dots">
           <span class="name">KRISTALČKI, OKRASKI</span> <span class="price">0,25€ - 0,50€ - 0,75€</span>
