--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -164,8 +164,8 @@
         </li>
       </ul>
       <p class="text-right bottom-space">
-        I. vse manjše poslikave, marble, enobarvne vijugice, večbarvna risana francoska, folije, itd.<br />
-        II. večbarvne poslikave, plamenčki, večbarvne vijugice, 3d dragon scale, snake skin, itd.
+        I. vse manjše poslikave, marble, enobarvne vijugice, večbarvna francoska, folije, itd.<br />
+        II. večbarvne poslikave, plamenčki, večbarvne vijugice, snake skin, itd.
       </p>
       <ul class="leaders bottom-space">
         <li class="dots">
@@ -186,7 +186,7 @@
           <span class="name">OBLIKOVANJE IN BARVANJE</span> <span class="price">20€</span>
         </li>
          <li class="dots">
-          <span class="name">LAMINACIJA OBRVI</span> <span class="price">45€</span>
+          <span class="name">LAMINACIJA OBRVI (BARVANJE VKLJUČENO)</span> <span class="price">45€</span>
         </li>
       </ul>
     
