--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -88,12 +88,14 @@
       <h1>MANIKIRA</h1>
 
       <ul class="leaders bottom-space">
-        <li class="dots"><span class="name">KLASIČNA MANIKIRA</span> <span class="price">15€</span></li>
+        <li class="dots"><span class="name">KOMBINIRANA MANIKIRA</span> <span class="price">15€€</span></li>
       </ul>
       <p class="text-justify">
-        ženska ali moška naravna manikira vsebuje oblikovanje in urejanje nohtov, urejanje obnohtne kožice, nego s
-        hranilnim oljem in vlažilno kremo ter kratko, sproščujočo masažo rok
-      </p>
+       Ženska ali moška manikira vsebuje oblikovanje in urejanje nohtov, precizno urejanje obnohtne kožice z brusilnimi nastavki po ruski metodi,
+        nego s hranilnim oljem in vlažilno kremo ter kratko, sproščujočo masažo rok. 
+Kaj je "kombi" manikura? Kombinirana manikira združuje uporabo električnega brusilnika za nohte ter kleščic za najboljše rezultate pri izgledu obnohtne kožice. 
+Postopek je neboleč saj se odstranjuje in ureja le odmrle in suhe dele kože. 
+*V ostale storitve je že vključena dodatna storitev, kombinirana manikura, saj pri lakiranih nohtih podaljša in zamakne videz narastka za cca. 10 dni.
 
       <h1>PERMANENTNO LAKIRANJE</h1>
       <ul class="leaders bottom-space">
@@ -234,8 +236,8 @@
       
       
 
-      <p class="text-justify no-bottom-space">Cenik velja od 10.10.2021. Plačilo je možno le z gotovino.</p>
-      <p class="text-justify no-top-space">Pridržujem si pravico do spremembe cenika. DDV ni obračunan na podlagi 1. odstavka 94. člena ZDDV-1.</p>
+      <p class="text-justify no-bottom-space">Cenik velja od 10.10.2021. Pridržujem si pravico do spremembe cen.</p>
+      <p class="text-justify no-top-space">DDV ni obračunan na podlagi 1. odstavka 94. člena ZDDV-1. Plačilo je možno le z gotovino.</p>
     </div>
     <script></script>
   </body>
