--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -191,19 +191,20 @@ Postopek je neboleč, saj se odstranjuje in ureja le odmrle in suhe dele kože.
           <span class="name">OBLIKOVANJE IN BARVANJE</span> <span class="price">20€</span>
         </li>
          <li class="dots">
-          <span class="name">LAMINACIJA OBRVI (BARVANJE VKLJUČENO)</span> <span class="price">45€</span>
+          <span class="name">LAMINACIJA OBRVI</span> <span class="price">45€</span>
         </li>
       </ul>
-    <p class="text-justify">
-»𝘒𝘢𝘫 𝘫𝘦 𝘭𝘢𝘮𝘪𝘯𝘢𝘤𝘪𝘫𝘢?« Laminacija obrvi je poltrajna neboleča metoda urejanja obrvi pri kateri se s pomočjo serumov dlačice usmeri v željen položaj in s tem doseže popoln naraven videz obrvi.
-Obrvi z minimalnim vzdrževanjem ostanejo urejene do 7 tednov . Za razliko od microbladinga je metoda poltrajna zato ne rabite skrbeti ali vam bo rezultat všeč ali ne saj se dlačice vedno lahko pošečejo v željeno oziroma prvotno smer.
-Laminacija je odlična rešitev za obrvi, katerih dlake rastejo v različne smeri, neurejene obrvi, asimetrične obrvi, neukrotljive obrvi , nepoln videz obrvi.
-
-               </ul>
-          <p class="text-justify">
+   <p class="text-justify">
 *V ceno laminacije je vključeno barvanje, ščetka za razčesavanje ter negovalna krema za enkratno uporabo.
             Več o negi po laminaciji si lahko preberete »𝘵𝘶𝘬𝘢𝘫«.
    </ul>
+    <p class="text-justify">
+»𝘒𝘢𝘫 𝘫𝘦 𝘭𝘢𝘮𝘪𝘯𝘢𝘤𝘪𝘫𝘢?« Laminacija obrvi je poltrajna neboleča metoda urejanja obrvi pri kateri se s pomočjo serumov dlačice usmeri v željen položaj in s tem doseže popoln naraven videz obrvi.
+Obrvi z minimalnim vzdrževanjem ostanejo urejene do 7 tednov. Za razliko od microbladinga je metoda poltrajna, zato ne rabite skrbeti, ali vam bo rezultat všeč ali ne, saj se dlačice vedno lahko počešejo v željeno oziroma prvotno smer.
+Laminacija je odlična rešitev za obrvi, katerih dlake rastejo v različne smeri, neurejene obrvi, asimetrične obrvi, neukrotljive obrvi ali za nepoln videz obrvi.
+
+               </ul>
+        
     
        <h1>IZDELKI ZA NEGO</h1>
       <ul class="leaders bottom-space">
