--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -201,7 +201,7 @@ Postopek je neboleč, saj se odstranjuje in ureja le odmrle in suhe dele kože.
     <p class="text-justify">
 »𝘒𝘢𝘫 𝘫𝘦 𝘭𝘢𝘮𝘪𝘯𝘢𝘤𝘪𝘫𝘢?« Laminacija obrvi je poltrajna neboleča metoda urejanja obrvi pri kateri se s pomočjo serumov dlačice usmeri v željen položaj in s tem doseže popoln naraven videz obrvi.
 Obrvi z minimalnim vzdrževanjem ostanejo urejene do 7 tednov. Za razliko od microbladinga je metoda poltrajna, zato ne rabite skrbeti, ali vam bo rezultat všeč ali ne, saj se dlačice vedno lahko počešejo v željeno oziroma prvotno smer.
-Laminacija je odlična rešitev za obrvi, katerih dlake rastejo v različne smeri, neurejene obrvi, asimetrične obrvi, neukrotljive obrvi ali za nepoln videz obrvi.
+Je odlična rešitev za obrvi, katerih dlake rastejo v različne smeri, neurejene obrvi, asimetrične obrvi, neukrotljive obrvi ali za nepoln videz obrvi.
 
                </ul>
         
