--- a/pricelist/index.html
+++ b/pricelist/index.html
@@ -253,8 +253,8 @@ Več o izdelkih za nego si lahko preberete »𝘵𝘶𝘬𝘢𝘫«.
       
 
       <p class="text-justify no-bottom-space">Cenik velja od 10.10.2021. Pridržujem si pravico do spremembe cen.</p>
-      <p class="text-justify no-top-space">DDV ni obračunan na podlagi 1. odstavka 94. člena ZDDV-1. 
-Plačilo je možno le z gotovino.</p>
+      <p class="text-justify no-top-space">DDV ni obračunan na podlagi 1. odstavka 94. člena ZDDV-1. </p>
+<p class="text-justify no-bottom-space">Plačilo je možno le z gotovino.</p>
     </div>
     <script></script>
   </body>
